# online_search_agent

./: .env  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Agent_First_Try.egg-info/: PKG-INFO  SOURCES.txt
Online_Search_Agent_Demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/static/: index.html
src/Online_Search_Agent_Demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agent/: 03_struct_output_demo3.py  agent.py  env_utils.py  my_llm.py  search_agent.py
src/agent/rag/: pdf_indexer.py  rag_load_retriever.py  rag_qa_chain.py  start.py  start2.py  test1.py  test2.py  test3.py  ts1.py  ts2.py  vectorstore_utils.py
src/agent/tools/: pdf_loader.py  rag_manage_tools.py  rag_pdf_input.py  rag_qa_tool.py  web_crawl.py  web_search.py
vectorstore/: chroma.sqlite3
vectorstore/chroma_db/: chroma.sqlite3
vectorstore/faiss_index/: index.faiss  index.pkl
