[project]
name = "Online_Search_Agent_Demo"
version = "1.0.2"
description = "一个集成了一些可以处理校园中常见的学生需求的联网AgentDemo"
authors = [
    { name = "SokolChen", email = "748706752@qq.com" }
]
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "langchain-deepseek>=0.1.0"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1","ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]